--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
         <div class="controls">
             <div class="control-group">
                 <label>
-                    <input type="radio" name="mode" value="free" checked>
+                    <input type="radio" name="mode" value="free">
                     FreeMode (свободное движение)
                 </label>
             </div>
             <div class="control-group">
                 <label>
-                    <input type="radio" name="mode" value="snap">
+                    <input type="radio" name="mode" value="snap" checked>
                     Snap режим (прилипание к слайдам)
                 </label>
                 <select id="snapAlign">
                     <option value="start">По левому краю</option>
-                    <option value="center">По центру</option>
+                    <option value="center" selected>По центру</option>
                 </select>
             </div>
             <div class="info">
