--- a/index.html
+++ b/index.html
@@ -54,15 +54,13 @@
             // Initialize Slider 1 (Free Mode)
             new TouchSlider('#slider1', {
                 freeMode: true,
-                friction: 0.95,
-                angleThreshold: 80 // degrees
+                friction: 0.95
             });
 
             // Initialize Slider 2 (Snap Mode)
             new TouchSlider('#slider2', {
                 freeMode: false,
-                friction: 0.92,
-                angleThreshold: 80
+                friction: 0.92
             });
         });
     </script>
