--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
     </div>
 
-    <script src="slider.js"></script>
+    <script src="TouchSlider.js?v=2"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             // Initialize Slider 1 (Free Mode)
