Rename TouchSlider.js to slider.js to fix case sensitivity on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="content-block">
-        <h1>Horizontal Slider Demo</h1>
+        <h1>Horizontal Slider</h1>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
